--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "wulf-server",
   "version": "0.0.1",
   "description": "Server for Web-based Ultima-Like Framework",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,7 +24,13 @@
   },
   "homepage": "https://github.com/rocket-boots/WULF-server#readme",
   "dependencies": {
+    "cuid": "^2.1.8",
     "express": "^4.17.1",
+    "rocket-boots-loop": "git+https://github.com/rocket-boots/Loop.git#master",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
